--- a/aktivitas.html
+++ b/aktivitas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<body>
-<section id="home">
+<html lang="en"><head></head>
+  <body>
+    <section id="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="row col-lg-9 align-content-center">
@@ -9,7 +9,7 @@
               <div class="welcome3 p-4 position-relative h-100 w-100">
                 <div class="welcome-container2">
                   <div class="welcome-judul3 rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div>
-                  <div class="welcome-isi3 lh-1 mt-3">Dah siap kan? Udah dong!</div>
+                  <div class="welcome-isi3 lh-1 mt-3">Siap ga?, Siaplah masa engga, yuk beraktivitas!</div>
                 </div>
               </div>
             </div>
@@ -34,7 +34,6 @@
         </div>
       </div>
     </section>
-
     <section id="todo">
       <div class="container mt-5">
         <div class="container-dalam">
@@ -52,25 +51,18 @@
                   <div class="p-4">
                     <p class="w-75 isi-todo-1">Selalu jaga kepercayaan diri kamu ya!</p>
                     <div class="isi-todo-1">
-                      <p>
-                        Jogging adalah olahraga sederhana yang memberikan sejumlah manfaat signifikan bagi kesehatan fisik dan mental. Salah satu manfaat utamanya adalah meningkatkan kesehatan jantung dan sistem peredaran darah. Dengan
-                        berjoging Lorem ipsum,
-                      </p>
+                      <p>Selalu menjaga kepercayaan diri adalah salah satu kunci untuk meraih keberhasilan dan menghadapi tantangan hidup dengan sikap positif. Memiliki kepercayaan diri berarti memiliki keyakinan pada kemampuan dan potensi diri sendiri.</p>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row col-lg-7">
                 <div class="col-lg-12 mt-3 mt-lg-0">
-                  <div class="todo-11 bg-purple position-relative h-100">
+                  <div class="todo-11 bg-red position-relative h-100">
                     <!-- <img src="public/images/icon-food-fried-eggs.png" alt="" class="jempol position-absolute" /> -->
                     <div class="isi-todo-11 p-4">
-                      Mungkin kamu bisa <br />
-                      mencoba jogging
-                      <p>
-                        Jogging adalah olahraga sederhana yang memberikan sejumlah manfaat signifikan bagi kesehatan fisik dan mental. Salah satu manfaat utamanya adalah meningkatkan kesehatan jantung dan sistem peredaran darah. Dengan
-                        berjoging
-                      </p>
+                      Masi aman kan nafasnya?
+                      <p>Berpikir dalam keadaan tenang dan terfokus sangatlah penting, dan salah satu cara untuk mencapainya adalah dengan menghindari tergesa-gesa dalam bernafas. Seperti angin yang berhembus perlahan-lahan, begitu pula bernafas dengan santai memberi kesempatan bagi pikiran untuk beristirahat dan merenung.</p>
                     </div>
                   </div>
                 </div>
@@ -88,6 +80,7 @@
         </div>
       </div>
     </section>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
