--- a/bangun.html
+++ b/bangun.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><head></head>
   <body>
-    <!-- HOME -->
     <section id="home">
       <div class="container">
         <div class="row justify-content-center">
@@ -15,7 +14,7 @@
                   <p class="lh-base mt-3">Ayo Awali Harimu dengan Penuh Semangat dan Produktivitas</p>
                 </div>
 
-                <a href="" type="button" class="btn btn-outline-light">Selanjutnya</a>
+                <a href="#todo" type="button" class="btn btn-outline-light">Selanjutnya</a>
 
                 <img class="position-absolute alarm" src="public/images/designrip-17.svg" alt="" />
               </div>
@@ -29,14 +28,12 @@
               <img class="" src="public/images/federico-respini-s-yffw-0-l-nr-7-s-unsplash-2.jpg" alt="" width="100%" />
             </div>
             <div class="jam mt-3 text-center justify-content-center col d-none d-lg-flex">
-              <p  class="align-self-center m-0">Wake Up Bro!</p>
+              <p class="align-self-center m-0">Wake Up Bro!</p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- END HOME -->
-    <!-- TO DO -->
     <section id="todo">
       <div class="container mt-5 overflow-hidden">
         <div class="container-dalam">
@@ -51,7 +48,8 @@
                     Ayo rapikan <br />
                     tempat tidur mu
                     <p>
-                      Membereskan kembali kasur setelah bangun tidur memiliki beragam manfaat kesehatan. Tindakan ini membantu meningkatkan kualitas tidur dengan menciptakan lingkungan tidur yang bersih dan nyaman. Selain itu, kasur yang rapi dapat mengurangi risiko alergi dan iritasi akibat debu atau tungau. Melakukan ini juga menciptakan perasaan keteraturan dan kedisiplinan, yang mendukung kesehatan mental dan kualitas hidup. Dengan merawat tempat tidur, kita merawat kesehatan dan kenyamanan kita sendiri, serta menciptakan fondasi tidur yang lebih baik untuk menjalani hari dengan energi dan semangat yang optimal.
+                      Membereskan kembali kasur setelah bangun tidur memiliki beberapa manfaat bagi kesehatan, seperti membantu meningkatkan kualitas tidur dengan menciptakan lingkungan tidur yang bersih dan nyaman. Selain itu, tindakan ini
+                      dapat membantu mengurangi
                     </p>
                   </div>
                 </div>
@@ -94,7 +92,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="col-lg-4 mt-3">
                 <div class="todo-3">
                   <img src="public/images/muled.png" alt="" />
@@ -115,7 +112,7 @@
         </div>
       </div>
     </section>
-    <!-- END TO DO -->
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
