--- a/istirahat.html
+++ b/istirahat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><head></head>
   <body>
-<section id="home">
+    <section id="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-4 home2">
@@ -17,14 +17,13 @@
                   <p class="lh-base mt-3">Dapatkan kesegaran dan keseimbangan dengan istirahat yang cukup</p>
                 </div>
 
-                <a href="" type="button" class="btn btn-outline-light">Selanjutnya</a>
+                <a href="#todo" type="button" class="btn btn-outline-light">Selanjutnya</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-
     <section id="todo">
       <div class="container mt-5">
         <div class="container-dalam">
@@ -40,12 +39,8 @@
                 <div class="todo-11 bg-yellow2 position-relative h-100">
                   <!-- <img src="public/images/icon-food-fried-eggs.png" alt="" class="jempol position-absolute" /> -->
                   <div class="isi-todo-11 p-4">
-                    Mungkin kamu bisa <br />
-                    mencoba yoga
-                    <p>
-                      yoga adalah olahraga sederhana yang memberikan sejumlah manfaat signifikan bagi kesehatan fisik dan mental. Salah satu manfaat utamanya adalah meningkatkan kesehatan jantung dan sistem peredaran darah. Dengan
-                      yoga 
-                    </p>
+                    Ternyata istirahat itu penting loh!
+                    <p>Istirahat siang memiliki peran yang sangat penting dalam menjaga kesehatan dan produktivitas kita sepanjang hari. Ini adalah waktu yang diperlukan untuk memberi tubuh kita istirahat dari aktivitas fisik dan pikiran yang terus-menerus. Lebih dari sekadar</p>
                   </div>
                 </div>
               </div>
@@ -124,7 +119,7 @@
         </div>
       </div>
     </section>
-    
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
