--- a/minum.html
+++ b/minum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<body>
-<section id="home">
+<html lang="en"><head></head>
+  <body>
+    <section id="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-3 home5">
@@ -15,43 +15,34 @@
               <div class="welcome-container">
                 <div class="welcome-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">welcome!</div>
                 <div class="welcome-isi lh-1 mt-3">
-                  Yuk Olahraga <br />
-                  biar sehat! <br />
-                  <p class="lh-base mt-3">
-                    Jangan khawatir, tidak perlu memulai dengan latihan yang terlalu berat. Mulailah dengan peregangan ringan untuk merenggangkan otot-otot Anda. Peregangan ini bisa membantu Anda merasa lebih rileks dan siap untuk
-                    beraktivitas. Jadi, tidak perlu terlalu berat, yang penting Anda merasa nyaman dan santai, seperti bersepeda
-                  </p>
+                  Kenapa kita butuh<br />
+                  air putih? <br />
+                  <p class="lh-base mt-3">Air putih sangat penting bagi kesehatan kita karena tubuh kita bergantung padanya untuk menjalankan berbagai fungsi vital. Tubuh manusia terdiri sebagian besar dari air, dan air berperan dalam menjaga keseimbangan elektrolit, mengatur suhu tubuh, dan menyediakan media bagi reaksi kimia selular yang penting.</p>
                 </div>
 
-                <a href="" type="button" class="btn btn-outline-light">Selanjutnya</a>
+                <a href="#todo" type="button" class="btn btn-outline-light">Selanjutnya</a>
               </div>
-            </div>
+            </div>              
           </div>
         </div>
       </div>
     </section>
-
     <section id="todo">
       <div class="container mt-5">
         <div class="container-dalam">
           <div class="todo-container position-relative">
             <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">konten</div>
             <div class="todo-header lh-1 mt-3">
-              Berikut adalah fakta-fakta <br />
-              yang<span class="todo-header-underline"> menarik </span>
+              Masa sih ga tau <br /><span class="todo-header-underline">manfaat dari air putih?</span>
             </div>
 
             <div class="row justify-content-center mt-5">
               <div class="col-lg-8">
-                <div class="todo-11 bg-yellow position-relative h-100">
+                <div class="todo-11 bg-yellow2 position-relative h-100">
                   <!-- <img src="public/images/icon-food-fried-eggs.png" alt="" class="jempol position-absolute" /> -->
                   <div class="isi-todo-11 p-4">
-                    Mungkin kamu bisa <br />
-                    mencoba jogging
-                    <p>
-                      Jogging adalah olahraga sederhana yang memberikan sejumlah manfaat signifikan bagi kesehatan fisik dan mental. Salah satu manfaat utamanya adalah meningkatkan kesehatan jantung dan sistem peredaran darah. Dengan
-                      berjoging
-                    </p>
+                    Apa hubungan pencernaan <br> dan air putih?
+                    <p>Air putih sangat penting bagi kesehatan kita karena tubuh kita bergantung padanya untuk menjalankan berbagai fungsi vital. Tubuh manusia terdiri sebagian besar dari air, dan air berperan dalam menjaga keseimbangan elektrolit, mengatur suhu tubuh, dan menyediakan media bagi reaksi kimia selular yang penting. Selain itu, air membantu dalam proses pencernaan dan penyerapan nutrisi, serta membantu dalam pembuangan produk sisa melalui urin dan keringat. Kehadiran air juga mendukung kesehatan jantung, fungsi pembuluh darah, dan pelumasan sendi. Selain itu, air juga membantu menjaga suhu tubuh yang stabil dan menjaga keseimbangan cairan dalam tubuh. Kekurangan air dapat menyebabkan dehidrasi, yang dapat mengganggu berbagai fungsi tubuh dan berdampak negatif pada kesehatan secara keseluruhan. Oleh karena itu, penting untuk memastikan asupan yang cukup air putih setiap hari untuk menjaga tubuh tetap terhidrasi dan berfungsi dengan baik.</p>
                   </div>
                 </div>
               </div>
@@ -136,6 +127,7 @@
         </div>
       </div>
     </section>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
