--- a/olahraga.html
+++ b/olahraga.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><head></head>
   <body>
     <section id="home">
       <div class="container">
@@ -27,7 +27,6 @@
         </div>
       </div>
     </section>
-
     <section id="todo">
       <div class="container mt-5 overflow-hidden">
         <div class="container-dalam">
@@ -111,6 +110,7 @@
         </div>
       </div>
     </section>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
