--- a/persiapan.html
+++ b/persiapan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"><head></head>
   <body>
     <section id="home">
       <div class="container">
@@ -18,7 +18,7 @@
 
           <div class="mt-3 col-12">
             <div class="jam2 text-center d-lg-flex justify-content-evenly py-4">
-              <p class="align-self-center m-0">08 : 23 AM</p>
+              <p class="align-self-center m-0">Prepare your day!</p>
               <div class="ketjam">
                 "Manfaatkan setiap detik: <br />
                 Waktu Adalah uang anda
@@ -28,7 +28,6 @@
         </div>
       </div>
     </section>
-
     <section id="todo">
       <div class="container mt-5 overflow-hidden">
         <div class="container-dalam">
@@ -83,8 +82,9 @@
                 <div class="todo-11 bg-blue position-relative h-100">
                   <!-- <img src="public/images/thumbs-up.png" alt="" class="jempol position-absolute" /> -->
                   <div class="isi-todo-11 p-4">
-                    Jangan lupa siapkan senyumanmu!<br />
-                    <p>Senyum di pagi hari memiliki dampak yang luar biasa pada berbagai aspek kesehatan dan kesejahteraan kita. Ketika kita memulai hari dengan senyuman, kita memberi diri sendiri manfaat emosional dan fisik yang signifikan. Senyum secara langsung merangsang pelepasan hormon endorfin, yang meredakan stres dan meningkatkan mood kita. Rasanya seperti awal yang cerah, yang mengirim sinyal positif ke otak kita dan membantu kita menghadapi hari dengan semangat yang lebih baik.<br>Lebih dari sekadar menaikkan mood, senyum juga memiliki dampak positif pada kesejahteraan sosial kita. Ini adalah cara alami untuk membuka pintu interaksi positif dengan orang lain. Senyuman membuat kita lebih ramah dan mudah didekati, memperkuat ikatan dengan teman, keluarga, dan rekan kerja. Ini menciptakan lingkungan sosial yang lebih positif dan hangat.</p>
+                    Jangan lupa siapkan senyummu ya!
+                    <p>Senyum di pagi hari memiliki dampak yang luar biasa pada berbagai aspek kesehatan dan kesejahteraan kita. Ketika kita memulai hari dengan senyuman, kita memberi diri sendiri manfaat emosional dan fisik yang signifikan.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -99,7 +99,8 @@
               <div class="col-lg-8 mt-3">
                 <div class="todo-11 bg-purple position-relative h-100">
                   <img src="public/images/icon-food-fried-eggs.png" alt="" class="jempol position-absolute" />
-                  <div class="isi-todo-11 p-4">Kenapa harus sarapan
+                  <div class="isi-todo-11 p-4">
+                    Kenapa harus sarapan?
                     <p>Sarapan adalah kebiasaan penting dengan manfaat yang tak terbantahkan bagi kesehatan dan kesejahteraan kita. Setelah malam berpuasa saat tidur, tubuh kita membutuhkan sumber energi untuk memulai hari dengan baik.</p>
                   </div>
                 </div>
@@ -110,6 +111,7 @@
         </div>
       </div>
     </section>
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
