--- a/sore.html
+++ b/sore.html
@@ -1,21 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style.scss" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Montserrat:wght@400;500;600;700&family=Outfit:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+<html lang="en"><head></head>
   <body>
- <section id="home">
+    <section id="home">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-xl-6">
@@ -27,7 +13,7 @@
                   <p class="lh-base mt-3">Tugas Hari Ini Sudah Selesai: Waktunya untuk Istirahat dan Bersantai</p>
                 </div>
 
-                <a href="" type="button" class="btn btn-outline-light">Selanjutnya</a>
+                <a href="#todo" type="button" class="btn btn-outline-light">Selanjutnya</a>
               </div>
             </div>
           </div>
@@ -40,13 +26,12 @@
         </div>
       </div>
     </section>
-
     <section id="todo">
       <div class="container mt-5">
         <div class="container-dalam">
           <div class="todo-container position-relative">
             <div class="todo-judul rounded-5 bg-opacity-25 bg-white d-inline py-1 px-4">konten</div>
-            <div class="todo-header lh-1 mt-3"><span class="todo-header-underline"> Waktu sore</span> enaknya ngapain ya</div>
+            <div class="todo-header lh-1 mt-3"><span class="todo-header-underline"> Waktu sore</span> enaknya ngapain ya?</div>
 
             <div class="row justify-content-center mt-5">
               <div class="row col-lg-8 order-2 order-lg-1 mt-3 mt-lg-0">
@@ -121,7 +106,7 @@
         </div>
       </div>
     </section>
-    
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
